# flower

baselines/fedhomo/: README.md  pyproject.toml
baselines/fedhomo/fedhomo/: client.py  client_app.py  dataset.py  encrypted_client.py  model.py  server_app.py  strategy.py  train.py  utils.py
