[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fedhomo"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.16",
    "aiosignal==1.3.2",
    "attrs==25.3.0",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "contourpy==1.3.1",
    "cryptography==44.0.2",
    "cycler==0.12.1",
    "datasets==3.1.0",
    "dill==0.3.8",
    "filelock==3.18.0",
    "flwr==1.17.0",
    "flwr-datasets==0.5.0",
    "fonttools==4.57.0",
    "frozenlist==1.5.0",
    "fsspec==2024.9.0",
    "grpcio==1.71.0",
    "huggingface-hub==0.30.1",
    "idna==3.10",
    "iterators==0.0.2",
    "Jinja2==3.1.6",
    "kiwisolver==1.4.8",
    "markdown-it-py==3.0.0",
    "MarkupSafe==3.0.2",
    "matplotlib==3.10.1",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "multidict==6.3.2",
    "multiprocess==0.70.16",
    "networkx==3.4.2",
    "numpy==2.2.4",
    "packaging==24.2",
    "pandas==2.2.3",
    "pathspec==0.12.1",
    "pillow==11.1.0",
    "propcache==0.3.1",
    "protobuf==4.25.6",
    "pyarrow==19.0.1",
    "pycparser==2.22",
    "pycryptodome==3.22.0",
    "Pygments==2.19.1",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "PyYAML==6.0.2",
    "requests==2.32.3",
    "rich==13.9.4",
    "seaborn==0.13.2",
    "setuptools==78.1.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sympy==1.13.1",
    "tenseal==0.3.16",
    "tomli==2.2.1",
    "tomli_w==1.2.0",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "tqdm==4.67.1",
    "typer==0.12.5",
    "typing_extensions==4.13.1",
    "tzdata==2025.2",
    "urllib3==2.3.0",
    "xxhash==3.5.0",
    "yarl==1.19.0"
]

[tool.hatch.metadata]
allow-direct-references = true

[project.optional-dependencies]
dev = [
    "isort==5.13.2",
    "black==24.2.0",
    "docformatter==1.7.5",
    "mypy==1.8.0",
    "pylint==3.2.6",
    "flake8==5.0.4",
    "pytest==6.2.4",
    "pytest-watch==4.2.0",
    "ruff==0.1.9",
    "types-requests==2.31.0.20240125",
]

[tool.isort]
profile = "black"
known_first_party = ["flwr"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]

[tool.pytest.ini_options]
minversion = "6.2"
addopts = "-qq"
testpaths = [
    "flwr_baselines",
]

[tool.mypy]
ignore_missing_imports = true
strict = false
plugins = "numpy.typing.mypy_plugin"

[tool.pylint."MESSAGES CONTROL"]
disable = "duplicate-code,too-few-public-methods,useless-import-alias"
good-names = "i,j,k,_,x,y,X,Y,K,N"
max-args = 10
max-attributes = 15
max-locals = 36
max-branches = 20
max-statements = 55

[tool.pylint.typecheck]
generated-members = "numpy.*, torch.*, tensorflow.*"

[[tool.mypy.overrides]]
module = [
    "importlib.metadata.*",
    "importlib_metadata.*",
]
follow_imports = "skip"
follow_imports_for_stubs = true
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = "torch.*"
follow_imports = "skip"
follow_imports_for_stubs = true

[tool.docformatter]
wrap-summaries = 88
wrap-descriptions = 88

[tool.ruff]
target-version = "py38"
line-length = 88
select = ["D", "E", "F", "W", "B", "ISC", "C4"]
fixable = ["D", "E", "F", "W", "B", "ISC", "C4"]
ignore = ["B024", "B027"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "proto",
]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "alecatalfamo"

[tool.flwr.app.components]
serverapp = "fedhomo.server_app:app"
clientapp = "fedhomo.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
fraction-fit = 0.5
local-epochs = 1


[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10
options.backend.client-resources.num-cpus = 2
options.backend.client-resources.num-gpus = 0.0
